base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  selector:
    app: sample
  ports:
  - port: 8080
    targetPort: 8080
