base/istio.yaml

# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: host1
spec:
  hosts:
  - host1
  http:
  - route:
    - destination:
        host: host1
        subset: v1

---

# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dest1
spec:
  host: dest1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
